<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">consumo</string>
    <string name="periodValue">periodValue</string>
    <string name="periodView">periodView</string>
    <string name="menu_save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Set you password</string>
    <string name="menu_about">About</string>
    <string name="menu_refresh">Refresh</string>
    <string name="setUsernamePassword">Please set username/password!!</string>
    <string name="errorOcurred">Ocorreu algum erro!!</string>


    <!--<string-array name="syncFrequency">-->
    <!--<item  name="1">Once a day</item>-->
    <!--<item name="7">Once a week</item>-->
    <!--<item name="3">Once a year</item>-->
    <!--<item name="0">Never (Update maually)</item>-->
    <!--</string-array>-->
    <!--<string-array name="syncFrequencyValues">-->
    <!--<item name="1">1</item>-->
    <!--<item name="7">7</item>-->
    <!--<item name="30">30</item>-->
    <!--<item name="0">0</item>-->
    <!--</string-array>-->
</resources>
