<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:numeric="integer"
               android:key="prefUsername"/>
        <EditTextPreference
                android:title="@string/pref_password"
                android:summary="@string/pref_password_summary"
                android:password="true"
                android:key="prefPassword"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="prefSendReport"
                android:summary="@string/pref_send_report_summary"
                android:title="@string/pref_send_report" >
        </CheckBoxPreference>

        <ListPreference
                android:key="prefSyncFrequency"
                android:entries="@array/syncFrequency"
                android:summary="@string/pref_sync_frequency_summary"
                android:entryValues="@array/syncFrequencyValues"
                android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>